# prometheus-cpp-lite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
3rdpatry/http-client-lite/: CMakeLists.txt
3rdpatry/http-client-lite/include/jdl/: httpclientlite.h
core/: CMakeLists.txt
core/include/prometheus/: client_metric.h  family.h  histogram.h
examples/: CMakeLists.txt  add_custom_metric_class.cpp  check_global_objects.cpp  legacy_prometheus_cpp.cpp  provide_via_http_pull_advanced.cpp  provide_via_http_pull_simple.cpp  provide_via_http_push_advanced.cpp  provide_via_http_push_simple.cpp  provide_via_textfile.cpp  quick_start.cpp  server_side_for_http_push.py  test_benchmark.cpp  test_counter.cpp  test_gauge.cpp  test_histogram.cpp  test_summary.cpp  use_benchmark_in_class_simple.cpp  use_metrics_in_class_advanced.cpp  use_metrics_in_class_simple.cpp
include/prometheus/: atomic_floating.h  benchmark.h  client_metric.h  core.h  counter.h  exposer.h  family.h  file_saver.h  gateway.h  gauge.h  histogram.h  http_puller.h  http_pusher.h  info.h  prometheus.h  push_to_server.h  registry.h  save_to_file.h  simpleapi.h  summary.h  text_serializer.h
simpleapi/: CMakeLists.txt
simpleapi/include/prometheus/: simpleapi.h
simpleapi/src/: simpleapi.cpp
src/: simpleapi.cpp
