
function(add_example NAME_EXAMPLE REQUIRED_TARGETS)
  string(CONCAT SUBPROJECT_NAME "prometheus_" ${NAME_EXAMPLE})
  message(STATUS "  Adding ${PROJECT_NAME}::${NAME_EXAMPLE} example..")

  add_executable        (${SUBPROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/${NAME_EXAMPLE}.cpp)
  target_link_libraries (${SUBPROJECT_NAME} ${REQUIRED_TARGETS})
  set_target_properties (${SUBPROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/examples)
endfunction()

# Core examples (no networking required)
add_example(test_counter                      prometheus-cpp-lite)
add_example(test_gauge                        prometheus-cpp-lite)
add_example(test_histogram                    prometheus-cpp-lite)
add_example(test_summary                      prometheus-cpp-lite)
add_example(test_benchmark                    prometheus-cpp-lite)
add_example(provide_via_textfile              prometheus-cpp-lite)
add_example(add_custom_metric_class           prometheus-cpp-lite)

# Networking examples (require ip-sockets)
if(PROMETHEUS_USE_IP_SOCKETS)
  add_example(quick_start                     prometheus-cpp-lite)
  add_example(provide_via_http_pull_simple    prometheus-cpp-lite)
  add_example(provide_via_http_pull_advanced  prometheus-cpp-lite)
  add_example(provide_via_http_push_simple    prometheus-cpp-lite)
  add_example(provide_via_http_push_advanced  prometheus-cpp-lite)
  add_example(legacy_prometheus_cpp           prometheus-cpp-lite)
  add_example(check_global_objects            prometheus-cpp-lite-full)
  add_example(use_benchmark_in_class_simple   prometheus-cpp-lite-full)
  add_example(use_metrics_in_class_simple     prometheus-cpp-lite-full)
  add_example(use_metrics_in_class_advanced   prometheus-cpp-lite-full)
endif()

